--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,15 @@ before_install:
   - nvm install 8.10
   - npm --version
   - node --version
+  # Install .NET Core 2.1
+  - export DOTNET_SKIP_FIRST_TIME_EXPERIENCE=1 DOTNET_CLI_TELEMETRY_OPTOUT=1
+  - if [ "$LINUX" ]; then sudo apt install libunwind8; fi
+  - wget https://dot.net/v1/dotnet-install.sh -O /tmp/dotnet-install.sh
+  - chmod +x /tmp/dotnet-install.sh
+  - /tmp/dotnet-install.sh -v 2.1.504
+  - export DOTNET_ROOT=/home/travis/.dotnet
+  - export PATH=/home/travis/.dotnet:/home/travis/.dotnet/tools:$PATH
+  - dotnet --info
 
 install:
   # Install the code requirements
