Fix incorrect Gradle project configuration.

--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-java-gradle/{{cookiecutter.project_name}}/HelloWorldFunction/build.gradle
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-java-gradle/{{cookiecutter.project_name}}/HelloWorldFunction/build.gradle
@@ -7,17 +7,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'software.amazon.awssdk:annotations:2.1.0'
-	compile (
-        'com.amazonaws:aws-lambda-java-core:1.1.0'
-    )
-    testCompile 'junit:junit:4.12'
-}
-
-sourceSets {
-    main {
-        java {
-            srcDir 'src/main'
-        }
-    }
+    implementation 'com.amazonaws:aws-lambda-java-core:1.2.0'
+    testImplementation 'junit:junit:4.12'
 }
