Integration test with debug build mode

--- a/.gitignore
+++ b/.gitignore
@@ -382,5 +382,7 @@ $RECYCLE.BIN/
 tests/integration/buildcmd/scratch
 tests/integration/testdata/buildcmd/Dotnetcore2.0/bin
 tests/integration/testdata/buildcmd/Dotnetcore2.0/obj
+tests/integration/testdata/buildcmd/Dotnetcore2.1/bin
+tests/integration/testdata/buildcmd/Dotnetcore2.1/obj
 
 # End of https://www.gitignore.io/api/osx,node,macos,linux,python,windows,pycharm,intellij,sublimetext,visualstudiocode
