--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include LICENSE
 include requirements/base.txt
 include requirements/prod.txt
 include requirements/dev.txt
+include requirements/tools.txt
 recursive-include samcli/local/init/templates *
 recursive-include samcli/lib *.json
 recursive-include samcli/commands/local/lib/generated_sample_events *.json
