--- a/samcli/local/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/test/HelloWorld.Test/HelloWorld.Tests.csproj
+++ b/samcli/local/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/test/HelloWorld.Test/HelloWorld.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     {%- if cookiecutter.runtime == 'dotnetcore2.0' %}
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    {%- elif cookiecutter.runtime == 'dotnetcore2.1' or cookiecutter.runtime == 'dotnet' %}
+    {%- else %}
     <TargetFramework>netcoreapp2.1</TargetFramework>
     {%- endif %}
   </PropertyGroup>
