Add Failing Integration Test and Possible Fix
This adds a failing test for an example of invalid API Gateway output,
and proposes a fix of disallowing missing status codes. Need to
investigate possible regressions of this fix before finalizing and
merging, may change the fix approach.

--- a/tests/integration/testdata/start_api/template.yaml
+++ b/tests/integration/testdata/start_api/template.yaml
@@ -191,6 +191,19 @@ Resources:
             Method: GET
             Path: /invalidresponsereturned
 
+  InvalidResponseHashFromLambdaFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: main.invalid_hash_response
+      Runtime: python3.6
+      CodeUri: .
+      Events:
+        InvalidResponseReturned:
+          Type: Api
+          Properties:
+            Method: GET
+            Path: /invalidresponsehash
+
   Base64ResponseFunction:
     Type: AWS::Serverless::Function
     Properties:
