--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
 version: 1.0.{build}
 image: ubuntu
+
 environment:
   AWS_DEFAULT_REGION: us-east-1
   matrix:
@@ -21,13 +22,24 @@ environment:
       PYTHON_VERSION: '3.7'
       PYTHON_ARCH: '64'
 
-build: off
 install:
-- pip install -e '.[dev]'
+
+    # Upgrade setuptools, wheel and virtualenv
+    - python -m pip install --upgrade setuptools wheel virtualenv
+
+    # Create new virtual environment and activate it
+    - rm -rf venv
+    - python -m virtualenv venv
+    - venv\Scripts\activate
+    - python -c "import sys; print(sys.executable)"
+
+    # Actually install SAM CLI's dependencies
+    - pip install -e '.[dev]'
+
 test_script:
-- pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\unit
-- flake8 samcli
-- flake8 tests\unit tests\integration
-- pylint --rcfile .pylintrc samcli
+    - pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\unit
+    - flake8 samcli
+    - flake8 tests\unit tests\integration
+    - pylint --rcfile .pylintrc samcli
 
 
