--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ image: ubuntu
 
 environment:
   AWS_DEFAULT_REGION: us-east-1
+  SAM_CLI_DEV: 1
+  
   matrix:
     - PYTHON_HOME: C:\Python27-x64
       PYTHON_VERSION: '2.7'
@@ -12,7 +14,7 @@ environment:
       PYTHON_VERSION: '3.6'
       PYTHON_ARCH: '64'
 
-    # Testing on both 32bit and 64bit Windows only for Latest Python version, 
+    # Testing on both 32bit and 64bit Windows only for Latest Python version,
     # because MSIs installers use Latest Python version
     - PYTHON_HOME: C:\Python37
       PYTHON_VERSION: '3.7'
