--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,42 +6,42 @@ environment:
   SAM_CLI_DEV: 1
   
   matrix:
-    - PYTHON_HOME: C:\Python27-x64
+    - PYTHON_HOME: "C:\\Python27-x64"
       PYTHON_VERSION: '2.7'
       PYTHON_ARCH: '32'
 
-    - PYTHON_HOME: C:\Python36-x64
+    - PYTHON_HOME: "C:\\Python36-x64"
       PYTHON_VERSION: '3.6'
       PYTHON_ARCH: '64'
 
     # Testing on both 32bit and 64bit Windows only for Latest Python version,
     # because MSIs installers use Latest Python version
-    - PYTHON_HOME: C:\Python37
+    - PYTHON_HOME: "C:\\Python37"
       PYTHON_VERSION: '3.7'
       PYTHON_ARCH: '32'
 
-    - PYTHON_HOME: C:\Python37-x64
+    - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7'
       PYTHON_ARCH: '64'
 
 install:
 
     # Upgrade setuptools, wheel and virtualenv
-    - python -m pip install --upgrade setuptools wheel virtualenv
+    - "python -m pip install --upgrade setuptools wheel virtualenv"
 
     # Create new virtual environment and activate it
-    - rm -rf venv
-    - python -m virtualenv venv
-    - venv\Scripts\activate
-    - python -c "import sys; print(sys.executable)"
+    - "rm -rf venv"
+    - "python -m virtualenv venv"
+    - "venv\\Scripts\\activate"
+    - "python -c \"import sys; print(sys.executable)\""
 
     # Actually install SAM CLI's dependencies
-    - pip install -e '.[dev]'
+    - "pip install -e '.[dev]'"
 
 test_script:
-    - pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\unit
-    - flake8 samcli
-    - flake8 tests\unit tests\integration
-    - pylint --rcfile .pylintrc samcli
+    - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\\unit"
+    - "flake8 samcli"
+    - "flake8 tests\\unit tests\\integration"
+    - "pylint --rcfile .pylintrc samcli"
 
 
