--- a/tests/integration/testdata/start_api/template.yaml
+++ b/tests/integration/testdata/start_api/template.yaml
@@ -9,6 +9,7 @@ Globals:
       - image~1png
     Variables:
       VarName: varValue
+    Cors: "*"
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function
