Fix pathpart code

--- a/tests/integration/testdata/start_api/methods-resources-api-template.yaml
+++ b/tests/integration/testdata/start_api/methods-resources-api-template.yaml
@@ -34,7 +34,7 @@ Resources:
   RootApiResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
-      PathPart: "/root"
+      PathPart: "root"
       ResourceId: "TestApi"
 
   AnyAndAllResource:
