Add serverless template

--- a/tests/integration/testdata/start_api/cdk-sample-output.yaml
+++ b/tests/integration/testdata/start_api/cdk-sample-output.yaml
@@ -196,10 +196,8 @@ Resources:
     Type: AWS::ApiGateway::Method
     Properties:
       HttpMethod: ANY
-      ResourceId:
-        Ref: Endpointproxy39E2174E
-      RestApiId:
-        Ref: EndpointEEF1FD8F
+      ResourceId: !Ref Endpointproxy39E2174E
+      RestApiId: !Ref EndpointEEF1FD8F
       AuthorizationType: NONE
       Integration:
         IntegrationHttpMethod: POST
