--- a/tests/integration/testdata/start_api/cdk-sample-output.yaml
+++ b/tests/integration/testdata/start_api/cdk-sample-output.yaml
@@ -19,22 +19,39 @@ Resources:
               - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
     Metadata:
       aws:cdk:path: CdkWorkshopStack/HelloHandler/ServiceRole/Resource
+
   HelloHandler2E4FBA4D:
     Type: AWS::Lambda::Function
     Properties:
-      Code: "."
-      Handler: main.handler
+      Code:
+        S3Bucket:
+          Ref: HelloHandlerCodeS3Bucket4359A483
+        S3Key:
+          Fn::Join:
+            - ""
+            - - Fn::Select:
+                  - 0
+                  - Fn::Split:
+                      - "||"
+                      - Ref: HelloHandlerCodeS3VersionKey07D12610
+              - Fn::Select:
+                  - 1
+                  - Fn::Split:
+                      - "||"
+                      - Ref: HelloHandlerCodeS3VersionKey07D12610
+      Handler: hello.handler
+      Runtime: nodejs8.10
       Role:
         Fn::GetAtt:
           - HelloHandlerServiceRole11EF7C63
           - Arn
-      Runtime: nodejs8.10
     DependsOn:
       - HelloHandlerServiceRole11EF7C63
     Metadata:
       aws:cdk:path: CdkWorkshopStack/HelloHandler/Resource
       aws:asset:path: /Users/viksriva/Documents/cdk-workshop/lambda
       aws:asset:property: Code
+
   HelloHandlerApiPermissionANYAC4E141E:
     Type: AWS::Lambda::Permission
     Properties:
