--- a/tests/integration/testdata/start_api/serverless-sample-output.yaml
+++ b/tests/integration/testdata/start_api/serverless-sample-output.yaml
@@ -56,18 +56,15 @@ Resources:
   HelloWorldLambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
-      Code:
-        S3Bucket:
-          Ref: ServerlessDeploymentBucket
-        S3Key: serverless/serverless-hello-world/dev/1561844010599-2019-06-29T21:33:30.599Z/serverless-hello-world.zip
+      Code: "."
       FunctionName: serverless-hello-world-dev-helloWorld
-      Handler: handler.helloWorld
+      Handler: main.handler
       MemorySize: 1024
       Role:
         Fn::GetAtt:
         - IamRoleLambdaExecution
         - Arn
-      Runtime: nodejs10.x
+      Runtime: python3.6
       Timeout: 6
     DependsOn:
     - HelloWorldLogGroup
