--- a/tests/integration/testdata/start_api/cdk-sample-output.yaml
+++ b/tests/integration/testdata/start_api/cdk-sample-output.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion : '2010-09-09'
+AWSTemplateFormatVersion: '2010-09-09'
 
 Resources:
   HelloHandlerServiceRole11EF7C63:
@@ -23,34 +23,9 @@ Resources:
   HelloHandler2E4FBA4D:
     Type: AWS::Lambda::Function
     Properties:
-      Code:
-        S3Bucket:
-          Ref: HelloHandlerCodeS3Bucket4359A483
-        S3Key:
-          Fn::Join:
-            - ""
-            - - Fn::Select:
-                  - 0
-                  - Fn::Split:
-                      - "||"
-                      - Ref: HelloHandlerCodeS3VersionKey07D12610
-              - Fn::Select:
-                  - 1
-                  - Fn::Split:
-                      - "||"
-                      - Ref: HelloHandlerCodeS3VersionKey07D12610
-      Handler: hello.handler
-      Runtime: nodejs8.10
-      Role:
-        Fn::GetAtt:
-          - HelloHandlerServiceRole11EF7C63
-          - Arn
-    DependsOn:
-      - HelloHandlerServiceRole11EF7C63
-    Metadata:
-      aws:cdk:path: CdkWorkshopStack/HelloHandler/Resource
-      aws:asset:path: /Users/viksriva/Documents/cdk-workshop/lambda
-      aws:asset:property: Code
+      Code: '.'
+      Handler: main.handler
+      Runtime: python3.6
 
   HelloHandlerApiPermissionANYAC4E141E:
     Type: AWS::Lambda::Permission
