--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,5 +51,6 @@ test_script:
     - "flake8 samcli"
     - "flake8 tests\\unit tests\\integration"
     - "pylint --rcfile .pylintrc samcli"
+    - "pytest tests/functional"
     - "pytest -s -vv tests\\integration"
 
