add gradle and mvn

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,6 +56,11 @@ install:
 
     # setup Gradle
     - "choco install gradle"
+    - "choco install maven"
+
+    - "refreshenv"
+    - "gradle -v"
+    - "mvn --version"
 
     # Echo final Path
     - "echo %PATH%"
@@ -76,7 +81,7 @@ install:
     - "pip install -e \".[dev]\""
    
 test_script:
-    - "pytest -s -vv tests\\integration"
+    - "pytest tests\\integration"
     - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\\unit"
     - "flake8 samcli"
     - "flake8 tests\\unit tests\\integration"
