Make integ tests verbose output

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -81,7 +81,7 @@ install:
     - "pip install -e \".[dev]\""
    
 test_script:
-    - "pytest tests\\integration"
+    - "pytest -vv tests\\integration"
     - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\\unit"
     - "flake8 samcli"
     - "flake8 tests\\unit tests\\integration"
