--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,9 +6,6 @@ build: off
 clone_folder: D:\source
 
 environment:
-  GOPATH: c:\gopath
-  GOVERSION: 1.11
-  GRADLE_OPTS: -Dorg.gradle.daemon=false
   AWS_DEFAULT_REGION: us-east-1
   SAM_CLI_DEV: 1
   
@@ -39,28 +36,38 @@ install:
     - "python --version"
     - "python -m pip install -r requirements/dev.txt"
     - "python -m pip install -e ."
-    - "set PATH=C:\\Ruby25-x64\\bin;%PATH%"
+
+    # setup Ruby
+    - "choco install ruby -y"
+    - "refreshenv"
+    - "ruby --version"
     - "gem --version"
     - "gem install bundler -v 1.17.3"
+    - "refreshenv"
     - "bundler --version"
     - "echo %PATH%"
 
     # setup go
-    # - rmdir c:\go /s /q
-    # - "choco install golang"
-    # - "choco install bzr"
-    # - "choco install dep"
-    # - setx PATH "C:\go\bin;C:\gopath\bin;C:\Program Files (x86)\Bazaar\;C:\Program Files\Mercurial;%PATH%;"
-    # - "go version"
-    # - "go env"
-
-    # setup Gradle
-    # - "choco install gradle"
-    # - "choco install maven"
-
+    - "choco install golang -y"
     - "refreshenv"
-    # - "gradle -v"
-    # - "mvn --version"
+    - "choco install bzr -y"
+    - "refreshenv"
+    - "choco install dep -y"
+    - "refreshenv"
+    - "go version"
+    - "go env"
+
+    # setup Java, Maven and Gradle
+    - "refreshenv"
+    - "choco install jdk8 -y"
+    - "refreshenv"
+    - "choco install maven -y"
+    - "refreshenv"
+    - "choco install gradle -y"
+    - "refreshenv"
+    - "java -version"
+    - "gradle -v"
+    - "mvn --version"
 
     # Echo final Path
     - "echo %PATH%"
