--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,9 @@ environment:
       PYTHON_VERSION: '3.7'
       PYTHON_ARCH: '64'
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 cache:
   - C:\ProgramData\chocolatey\bin -> appveyor.yml
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
