feat: add information on number of cpus and memory

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,8 @@ environment:
 
 init:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  - gcim Win32_Processor | % { "$($_.NumberOfLogicalProcessors) logical CPUs" }
+  - gcim Win32_OperatingSystem | % { "$([int]($_.TotalVisibleMemorySize/1mb)) Gb" }
 
 cache:
   - C:\ProgramData\chocolatey\bin -> appveyor.yml
