--- a/tests/integration/testdata/start_api/template.yaml
+++ b/tests/integration/testdata/start_api/template.yaml
@@ -73,6 +73,19 @@ Resources:
             Method: GET
             Path: /echoeventbody
 
+  EchoIntegerBodyFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: main.echo_integer_body
+      Runtime: python3.6
+      CodeUri: .
+      Events:
+        EchoEventBodyPath:
+          Type: Api
+          Properties:
+            Method: GET
+            Path: /echo_integer_body
+
   ContentTypeSetterFunction:
     Type: AWS::Serverless::Function
     Properties:
