Update intrinsic Test by fixing overriden yaml values

--- a/tests/integration/testdata/start_api/methods-resources-api-template.yaml
+++ b/tests/integration/testdata/start_api/methods-resources-api-template.yaml
@@ -104,7 +104,7 @@ Resources:
       PathPart: "v1"
       ParentId: "RootApiResource"
       ResourceId: "TestApi"
-  EchoBase64ResponseMethod:
+  ProxyMethod:
     Type: "AWS::ApiGateway::Method"
     Properties:
       HttpMethod: "GET"
