--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,18 +28,29 @@ environment:
       PYTHON_VERSION: '3.7.4'
       PYTHON_ARCH: '64'
 
+for:
+  - 
+    matrix:
+      only:
+        - image: Visual Studio 2017
+
+    install:
+      # Upgrade setuptools, wheel and virtualenv
+      - "python -m pip install --upgrade setuptools wheel virtualenv"
+
+      # Create new virtual environment and activate it
+      - "rm -rf venv"
+      - "python -m virtualenv venv"
+      - "venv/Scripts/activate"
+
+  - 
+    matrix:
+      only:
+        - image: Ubuntu
+    install:
+      - sh: "source ${HOME}/venv${PYTHON_VERSION}/bin/activate"
+
 install:
-
-    # Runs on Linux only
-    - sh: "source ${HOME}/venv${PYTHON_VERSION}/bin/activate"
-
-    # Upgrade setuptools, wheel and virtualenv
-    - "python -m pip install --upgrade setuptools wheel virtualenv"
-
-    # Create new virtual environment and activate it
-    - "rm -rf venv"
-    - "python -m virtualenv venv"
-    - "venv/Scripts/activate"
     - "python -c \"import sys; print(sys.executable)\""
 
     # Actually install SAM CLI's dependencies
