Enable all py versions

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,9 +9,9 @@ environment:
   
   matrix:
 
-    # - PYTHON_HOME: "C:\\Python27-x64"
-    #   PYTHON_VERSION: '2.7'
-    #   PYTHON_ARCH: '32'
+    - PYTHON_HOME: "C:\\Python27-x64"
+      PYTHON_VERSION: '2.7'
+      PYTHON_ARCH: '32'
 
     - PYTHON_HOME: "C:\\Python36-x64"
       PYTHON_VERSION: '3.6.8'
@@ -19,9 +19,9 @@ environment:
 
     # Testing on both 32bit and 64bit Windows only for Latest Python version,
     # because MSIs installers use Latest Python version
-    # - PYTHON_HOME: "C:\\Python37"
-    #   PYTHON_VERSION: '3.7'
-    #   PYTHON_ARCH: '32'
+    - PYTHON_HOME: "C:\\Python37"
+      PYTHON_VERSION: '3.7'
+      PYTHON_ARCH: '32'
 
     - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7.4'
