--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 image: 
-  # - Visual Studio 2017
+  - Visual Studio 2017
   - Ubuntu
 
 environment:
@@ -9,19 +9,19 @@ environment:
  
   matrix:
 
-    # - PYTHON_HOME: "C:\\Python27-x64"
-    #   PYTHON_VERSION: '2.7'
-    #   PYTHON_ARCH: '32'
+    - PYTHON_HOME: "C:\\Python27-x64"
+      PYTHON_VERSION: '2.7'
+      PYTHON_ARCH: '32'
 
-    # - PYTHON_HOME: "C:\\Python36-x64"
-    #   PYTHON_VERSION: '3.6.8'
-    #   PYTHON_ARCH: '64'
+    - PYTHON_HOME: "C:\\Python36-x64"
+      PYTHON_VERSION: '3.6.8'
+      PYTHON_ARCH: '64'
 
     # Testing on both 32bit and 64bit Windows only for Latest Python version,
     # because MSIs installers use Latest Python version
-    # - PYTHON_HOME: "C:\\Python37"
-    #   PYTHON_VERSION: '3.7'
-    #   PYTHON_ARCH: '32'
+    - PYTHON_HOME: "C:\\Python37"
+      PYTHON_VERSION: '3.7'
+      PYTHON_ARCH: '32'
 
     - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7.4'
@@ -63,5 +63,7 @@ test_script:
     - "flake8 samcli"
     - "flake8 tests/unit tests/integration"
     - "pylint --rcfile .pylintrc samcli"
-    - "pytest -vv tests/integration"
+
+    # Runs only in Linux
+    - sh: "pytest -vv tests/integration"
 
