--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,6 +45,7 @@ for:
       - sh: "PATH=$JAVA_HOME/bin:$PATH"
       - sh: "source ${HOME}/venv${PYTHON_VERSION}/bin/activate"
       - sh: "rvm use 2.5"
+      - sh: "apt-get -y gradle"
 
 build_script:
   - "python -c \"import sys; print(sys.executable)\""
