--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ for:
       - sh: "rvm use 2.5"
 
       # Install latest gradle 
-      - sh: "sudo apt-get remove gradle"
+      - sh: "sudo apt-get -y remove gradle"
       - sh: "wget https://services.gradle.org/distributions/gradle-5.5-bin.zip -P /tmp"
       - sh: "sudo unzip -d /opt/gradle /tmp/gradle-*.zip"
       - sh: "PATH=/opt/gradle/gradle-5.5/bin:$PATH"
