Update Intrinsic Resolver to handle Layers
Lambda Layers were added as a special case where Ref's to unresolved resources remained as {"Ref": logical_id}.
This was chosen to be the default since SamTranslator handles the translation of some resource and converts some types such as
{"Ref":"AWS::Region"} -> {"Ref": "us-east-1"} and replacing Globals.

--- a/tests/integration/testdata/start_api/methods-resources-api-template.yaml
+++ b/tests/integration/testdata/start_api/methods-resources-api-template.yaml
@@ -18,9 +18,9 @@ Resources:
     Type: AWS::ApiGateway::Stage
     Properties:
       StageName: Dev
-      RestApiId: TestApi
+      RestApiId: !Ref TestApi
       Variables:
-      Stack: Dev
+        Stack: Dev
 
   MyNonServerlessLambdaFunction:
     Properties:
