--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,7 +63,7 @@ test_script:
     - "flake8 samcli"
     - "flake8 tests/unit tests/integration"
     - "pylint --rcfile .pylintrc samcli"
-    - "pytest -vv tests/functional"
+    - "pytest -vv tests/smoke"
 
     # Runs only in Linux
     - sh: "pytest -vv tests/integration"
