Fix to make smoketest work

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,11 @@ environment:
       PYTHON_VERSION: '3.7.4'
       PYTHON_ARCH: '64'
 
+    - RUN_SMOKE: 1
+      PYTHON_HOME: "C:\\Python37-x64"
+      PYTHON_VERSION: '3.7.4'
+      PYTHON_ARCH: '64'
+
 for:
   - 
     matrix:
@@ -63,7 +68,9 @@ test_script:
     - "flake8 samcli"
     - "flake8 tests/unit tests/integration"
     - "pylint --rcfile .pylintrc samcli"
-    - "pytest -vv tests/smoke"
+
+    # Smoke tests run in parallel
+    - "pytest -n 4 -vv tests/smoke"
 
     # Runs only in Linux
     - sh: "pytest -vv tests/integration"
