Run smoketest in isolation

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,22 +9,19 @@ environment:
  
   matrix:
 
-    - PYTHON_HOME: "C:\\Python27-x64"
-      PYTHON_VERSION: '2.7.16'
-      PYTHON_ARCH: '32'
+    # - PYTHON_HOME: "C:\\Python27-x64"
+    #   PYTHON_VERSION: '2.7.16'
+    #   PYTHON_ARCH: '32'
 
-    - PYTHON_HOME: "C:\\Python36-x64"
-      PYTHON_VERSION: '3.6.8'
-      PYTHON_ARCH: '64'
+    # - PYTHON_HOME: "C:\\Python36-x64"
+    #   PYTHON_VERSION: '3.6.8'
+    #   PYTHON_ARCH: '64'
 
-    - PYTHON_HOME: "C:\\Python37-x64"
-      PYTHON_VERSION: '3.7.4'
-      PYTHON_ARCH: '64'
+    # - PYTHON_HOME: "C:\\Python37-x64"
+    #   PYTHON_VERSION: '3.7.4'
+    #   PYTHON_ARCH: '64'
 
     - ONLY_SMOKE: 1
-      PYTHON_HOME: "C:\\Python37-x64"
-      PYTHON_VERSION: '3.7.4'
-      PYTHON_ARCH: '64'
 
 for:
   - 
@@ -61,6 +58,10 @@ for:
     matrix:
       only:
         - ONLY_SMOKE: 1
+    environment:
+      PYTHON_HOME: "C:\\Python37-x64"
+      PYTHON_VERSION: '3.7.4'
+      PYTHON_ARCH: '64'
     test_script:
       # Smoke tests run in parallel
       - "pytest -n 4 -vv tests/smoke"
