--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ environment:
     - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7.4'
       PYTHON_ARCH: '64'
+      RUN_SMOKE: 1
 
 for:
   - 
@@ -55,13 +56,6 @@ for:
       - sh: "sudo unzip -d /opt/gradle /tmp/gradle-*.zip"
       - sh: "PATH=/opt/gradle/gradle-5.5/bin:$PATH"
 
-  - matrix:
-      only:
-        - configuration: smoke
-
-    test_script:
-      - "pytest -n 4 -vv tests/smoke"
-
 build_script:
   - "python -c \"import sys; print(sys.executable)\""
 
@@ -79,4 +73,4 @@ test_script:
 
     # Smoke tests run in parallel - it runs on both Linux & Windows
     # Presence of the RUN_SMOKE envvar will run the smoke tests
-    # - ps: "If ($env:RUN_SMOKE) {pytest -n 4 -vv tests/smoke}"
+    - ps: "If ($env:RUN_SMOKE) {pytest -n 4 -vv tests/smoke}"
