Try manual integ test runs

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,19 +10,19 @@ environment:
   SAM_CLI_DEV: 1
   
   matrix:
-    - PYTHON_HOME: "C:\\Python27-x64"
-      PYTHON_VERSION: '2.7'
-      PYTHON_ARCH: '32'
+    # - PYTHON_HOME: "C:\\Python27-x64"
+    #   PYTHON_VERSION: '2.7'
+    #   PYTHON_ARCH: '32'
 
-    # Testing on both 32bit and 64bit Windows only for Latest Python version,
-    # because MSIs installers use the latest Python3.6 version
-    - PYTHON_HOME: "C:\\Python36"
-      PYTHON_VERSION: '3.6'
-      PYTHON_ARCH: '32'
+    # # Testing on both 32bit and 64bit Windows only for Latest Python version,
+    # # because MSIs installers use the latest Python3.6 version
+    # - PYTHON_HOME: "C:\\Python36"
+    #   PYTHON_VERSION: '3.6'
+    #   PYTHON_ARCH: '32'
 
-    - PYTHON_HOME: "C:\\Python36-x64"
-      PYTHON_VERSION: '3.6'
-      PYTHON_ARCH: '64'
+    # - PYTHON_HOME: "C:\\Python36-x64"
+    #   PYTHON_VERSION: '3.6'
+    #   PYTHON_ARCH: '64'
 
     - PYTHON_HOME: "C:\\Python37-x64"
       PYTHON_VERSION: '3.7'
@@ -85,9 +85,11 @@ install:
 
     # Actually install SAM CLI's dependencies
     - "pip install -e \".[dev]\""
-test_script:
-    - "pytest -vv tests\\integration"
-    - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\\unit"
-    - "flake8 samcli"
-    - "flake8 tests\\unit tests\\integration"
-    - "pylint --rcfile .pylintrc samcli"
+# test_script:
+    # - "pytest -vv tests\\integration"
+    # - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests\\unit"
+    # - "flake8 samcli"
+    # - "flake8 tests\\unit tests\\integration"
+    # - "pylint --rcfile .pylintrc samcli"
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
